Added creating new ad
